# euroopencharts

./: AGENTS.md  README.md  config.json  pyproject.toml  requirements.txt  run_actual_data_only.py  run_example.py
docs/: architecture.md  configuration.md  dagonstar_mapping.md  data_availability.md  data_flow.md  fair.md  generated_outputs.md  getting_started.md  hpc_cloud.md  marine_protected_areas.md  opencpn_signalk.md  testing.md  troubleshooting.md  tutorial_mpa_ingestion.md
examples/: create_highest_quality_map.py  highest_quality_map_config.json  inspect_outputs.py  run_example.sh  run_tests.sh
src/euroopencharts/: __init__.py  actual_pipeline.py  cli.py  config.py  downloads.py  export.py  high_quality.py  model.py  mpa.py  process.py  sources.py  workflow.py
tests/: test_agents_contract.py  test_config_contract.py  test_downloads.py  test_high_quality.py  test_mpa_validation.py  test_output_contract.py  test_workflow.py
