[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "euroopencharts"
version = "0.1.0"
description = "FAIR, offline-first nautical chart prototype for the eastern Central-Southern Tyrrhenian Sea"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Raffaele Montella / meteo@uniparthenope research prototype"}]
dependencies = ["matplotlib>=3.7", "numpy>=1.24"]

[project.optional-dependencies]
figures = [
    "basemap>=2.0; python_version < '3.14'",
    "basemap-data-hires>=1.3; python_version < '3.14'",
    "matplotlib>=3.7",
    "numpy>=1.24",
]
test = ["pytest>=8"]

[project.scripts]
euroopencharts = "euroopencharts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
